--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <img src="https://optim.tildacdn.com/tild3435-6161-4339-a365-366363333131/-/resize/78x/-/format/webp/_____.png.webp" alt="logo">
         <div>
             <div class="school-title"><span>Ling-vo!</span> School</div>
-            <div class="subtitle">Солнечный летний лагерь.</div> <div class="phone-number"> Звоните по +7 (910) 543-77-86</div>
+            <div class="subtitle">Образовательный летний лагерь</div> <div class="phone-number"> Звоните по +7 (910) 543-77-86</div>
         </div>
     </div>
 
@@ -307,3 +307,4 @@
 
 </body>
 </html>
+
