--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
         <div class="info-card">
             <img src="https://i.postimg.cc/XJwdMM30/photo-2025-12-30-14-39-43.jpg" alt="">
             <div class="info-content">
-                <h3>Лагерь длится 10 солнечных дней</h3>
-                <p>В лагере будет ночовки все 10 дней. Будет очень весело!</p>
+                <h3>Лагерь длится 7 солнечных дней</h3>
+                <p>Проживание в комфортном гостевом доме!</p>
             </div>
         </div>
 
@@ -290,7 +290,7 @@
             <img src="https://i.postimg.cc/R0GHPcBN/kids1.jpg" alt="">
             <div class="info-content">
                 <h3>На природе</h3>
-                <p>Вы сможите быть на природе без остоновки!</p>
+                <p>Целую неделю дети проведут время на свежем воздухе!</p>
             </div>
         </div>
 
@@ -298,7 +298,7 @@
             <img src="https://i.postimg.cc/HkY5bZGH/kids2.jpg" alt="">
             <div class="info-content">
                 <h3>У нас весело!</h3>
-                <p>Находите друзей и радосйи в летним лагере</p>
+                <p>Ваш ребенок обретет новых друзей, оздоровится, органично получит новые знания или закрепит то, что важно</p>
             </div>
         </div>
 
@@ -307,4 +307,5 @@
 
 </body>
 </html>
+
 
