--- a/index.html
+++ b/index.html
@@ -281,8 +281,7 @@
             <img src="https://i.postimg.cc/K8pbJzWz/bed.jpg" alt="">
             <div class="info-content">
                 <h3>Спокойно</h3>
-                <p>Летний отдых на природе!
-Развлечения и немного обучения (под вашу цель): английский, изба-читальня, математика, русский.</p>
+                <p>Лагерь проходит на территории базы отдыха, расположенной в городе Сухиничи Калужской области. Спокойствие родителей и безопасность ребенка - наша цель</p>
             </div>
         </div>
 
@@ -307,5 +306,6 @@
 
 </body>
 </html>
+
 
 
