--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background: url("https://i.postimg.cc/y6DWS42z/Snimok-ekrana-2025-12-30-211338.png") no-repeat center center fixed;
+            background: url("https://i.postimg.cc/HkY5bZGH/kids2.jpg") no-repeat center center fixed;
             background-size: cover;
         }
         h1, p, h2 {
@@ -306,6 +306,7 @@
 
 </body>
 </html>
+
 
 
 
