--- a/index.html
+++ b/index.html
@@ -300,12 +300,19 @@
                 <p>Ваш ребенок обретет новых друзей, оздоровится, органично получит новые знания или закрепит то, что важно</p>
             </div>
         </div>
-
+        <div class="info-card">
+            <img src="https://img.freepik.com/premium-photo/chocolate-vanilla-strawberry-ice-cream-isolated-white_807701-3455.jpg?w=2000" alt="">
+            <div class="info-content">
+                <h3>Питание</h3>
+                <p>Питание будет проходить 4 раза! Завтрак, Обед, Полдник и Ужин!</p>
+            </div>
+        </div>
     </div>
 </div>
 
 </body>
 </html>
+
 
 
 
